# funsql-python

./: .gitignore  LICENSE  README.md  setup.cfg
.github/workflows/: publish.yml  test.yml
docs/: DEV-compiler.md  DEV-query.md  DEV-using-clauses.ipynb  README.md  [dev]-using-clauses.ipynb  against-sql.ipynb  debug-output-nested.md  usage-guide.ipynb  using-clauses.ipynb  using-nodes.ipynb
docs/development/: using-clauses.ipynb
docs/tests/: using-clauses.ipynb  using-nodes.ipynb
examples/: against-sql.ipynb  using-clauses.ipynb  using-nodes.ipynb
src/funsql/: __init__.py  clausedefs.py  clauses.py  common.py  nodedefs.py  nodes.py  prettier.py  render.py  sqlcontext.py
src/funsql/compiler/: annotate.py  link.py  resolve.py  serialize.py  translate.py  types.py
src/funsql/prettyprint/: __init__.py  printer.py
src/funsql/tools/: __init__.py  dialects.py  reflect.py  utilities.py
tests/: test_funsql_python.py
