[metadata]
name = funsql-python
version = 0.1.0
author = Ishan Anand
description = library to write compositional sql
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ananis25/funsql-python
classifiers =
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

# read up https://setuptools.pypa.io/en/latest/userguide/dependency_management.html

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
# install_requires = 

[options.packages.find]
where = src

[options.extras_require]
test = 
    pytest >= 7.0
